--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -18,6 +18,6 @@
                 <DropShadowEffect/>
             </TextBlock.Effect>
         </TextBlock>
-        <Button x:Name="MaximizeButton" Content="▲" Margin="0,0,14,14" Foreground="Yellow" BorderBrush="Black" Background="Black" Click="MaximizeButton_Click" Height="43" VerticalAlignment="Bottom" FontSize="8" HorizontalAlignment="Right" Width="47" Grid.Row="1"/>
+        <Button x:Name="MaximizeButton" Width="37" Height="40" Margin="0,0,15,14" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="MaximizeButton_Click" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Yellow" Content="▲" FontFamily="ROG Fonts" Grid.RowSpan="1" Grid.ColumnSpan="1" />
     </Grid>
 </Window>
